--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "mv_weatherapp",
   "version": "1.0.0",
-  "description": "",
+  "description": "Weather app",
   "main": "index.js",
   "scripts": {
+    "start": "react-scripts start",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode production",
     "dev": "webpack --mode development"
@@ -19,13 +20,14 @@
   },
   "homepage": "https://github.com/alissonperes/mv_weatherapp#readme",
   "devDependencies": {
-    "css-loader": "^3.4.2",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.1.0",
-    "eslint-plugin-import": "^2.20.2",
-    "style-loader": "^1.1.3",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11"
+    "css-loader": "^6.5.1",
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.4",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.66.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.7.3"
   },
   "dependencies": {},
   "keywords": []
